--- a/ChatApp-client/src/app/home/home.component.html
+++ b/ChatApp-client/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
-    <h1 class="">Sample Chat App</h1>
-    <p class="lead">Welcome to the demo MEAN stack Socket.io Chat App</p>
+    <h1 class="">Start chatting :)</h1>
+    <p class="lead">Welcome to the Chat App</p>
     <ng-template #buttons>
         <a class="btn btn-info" [routerLink]="['/login']">Login</a>
         <a class="btn btn-primary" [routerLink]="['/sign-up']">Sign-up</a> 
